// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTabs renders Alert with text and link 1`] = `
<div>
  <div>
    <div
      class="alert alert-info"
      role="alert"
    >
      <span
        class="alert-indicator"
      >
        <svg
          class="lexicon-icon lexicon-icon-info-circle"
          role="img"
        >
          <use
            href="#info-circle"
          />
        </svg>
      </span>
      
      <span>
        Alert 
        <a
          href="/"
          title="Link"
        >
          Link
        </a>
      </span>
    </div>
    <div
      class="products-landing-tabs"
    >
      <ul
        class="nav nav-underline"
        role="tablist"
      >
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="active btn btn-unstyled nav-link"
            id="tab-0"
            role="tab"
            type="button"
          >
            Tab All
          </button>
        </li>
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="btn btn-unstyled nav-link"
            id="tab-1"
            role="tab"
            type="button"
          >
            Tab KB
          </button>
        </li>
      </ul>
    </div>
    <section
      aria-labelledby="tab-0"
      role="tabpanel"
    >
      <div
        class="products-landing-tab-content"
      >
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with All Configs
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with No Description
              </h4>
              
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no Icon
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no URL
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              
              <p
                class="description"
              >
                Card with No Name
              </p>
            </div>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`ProductTabs renders correctly with KB tabs and all access tabs 1`] = `
<div>
  <div>
    
    <div
      class="products-landing-tabs"
    >
      <ul
        class="nav nav-underline"
        role="tablist"
      >
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="active btn btn-unstyled nav-link"
            id="tab-0"
            role="tab"
            type="button"
          >
            Tab All
          </button>
        </li>
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="btn btn-unstyled nav-link"
            id="tab-1"
            role="tab"
            type="button"
          >
            Tab KB
          </button>
        </li>
      </ul>
    </div>
    <section
      aria-labelledby="tab-0"
      role="tabpanel"
    >
      <div
        class="products-landing-tab-content"
      >
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with All Configs
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with No Description
              </h4>
              
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no Icon
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no URL
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              
              <p
                class="description"
              >
                Card with No Name
              </p>
            </div>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`ProductTabs renders correctly with non KB tabs and all access tabs 1`] = `
<div>
  <div>
    
    <div
      class="products-landing-tabs"
    >
      <ul
        class="nav nav-underline"
        role="tablist"
      >
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="active btn btn-unstyled nav-link"
            id="tab-0"
            role="tab"
            type="button"
          >
            Tab All
          </button>
        </li>
        <li
          class="nav-item"
          role="presentation"
        >
          <button
            class="btn btn-unstyled nav-link"
            id="tab-1"
            role="tab"
            type="button"
          >
            Tab Non KB
          </button>
        </li>
      </ul>
    </div>
    <section
      aria-labelledby="tab-0"
      role="tabpanel"
    >
      <div
        class="products-landing-tab-content"
      >
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with All Configs
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with No Description
              </h4>
              
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no Icon
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <h4
                class="title"
              >
                Card with no URL
              </h4>
              <p
                class="description"
              >
                Card Description
              </p>
            </div>
          </a>
        </div>
        <div
          class="product-card"
        >
          <a
            class="autofit-row autofit-row-center"
            href="/"
          >
            <div
              class="autofit-col"
            >
              <svg
                class="icon"
              >
                <use
                  href="#ticket"
                />
              </svg>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              
              <p
                class="description"
              >
                Card with No Name
              </p>
            </div>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;
